unpackaged/main/default/objects/Account/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <label>Members</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Agents</fullName>
            </value>
            <value>
                <fullName>All Partners</fullName>
            </value>
            <value>
                <fullName>Affiliates Only</fullName>
            </value>
            <value>
                <fullName>Brokerage Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>