unpackaged/main/default/objects/Account/fields/Migration_Audit_Redirects__c.field-meta.xml
<CustomField>
    <fullName>Migration_Audit_Redirects__c</fullName>
    <label>Migration Audit + Redirects</label>
    <type>Url</type>
</CustomField>