unpackaged/main/default/objects/Account/fields/MLS_Prior_12_months_avg_buyer_price__c.field-meta.xml
<CustomField>
    <fullName>MLS_Prior_12_months_avg_buyer_price__c</fullName>
    <label>(MLS) Prior 12 months avg buyer price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>