unpackaged/main/default/objects/Account/fields/MLS_Prior_12_months_buyer_transaction__c.field-meta.xml
<CustomField>
    <fullName>MLS_Prior_12_months_buyer_transaction__c</fullName>
    <label>(MLS) Prior 12 months buyer transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>