unpackaged/main/default/objects/Account/fields/Monthly_Marketing_Fee_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Marketing_Fee_At_Risk__c</fullName>
    <label>Monthly Marketing Fee At Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>