unpackaged/main/default/objects/Account/fields/Monthly_Marketing_fee_feed_tracking__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Marketing_fee_feed_tracking__c</fullName>
    <label>Monthly Marketing fee feed tracking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>