unpackaged/main/default/objects/Account/fields/Monthly_Subscription_Fee1__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Subscription_Fee1__c</fullName>
    <label>Monthly Subscription Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>