unpackaged/main/default/objects/Account/fields/Neighborhood_Guides__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_Guides__c</fullName>
    <label>Neighborhood Guides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Missing Some</fullName>
            </value>
            <value>
                <fullName>Thin Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>