unpackaged/main/default/objects/Account/fields/New_Sales_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>New_Sales_Opportunities__c</fullName>
    <label>New Sales Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>New Sales, Closed Won - New Sales</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>