unpackaged/main/default/objects/Account/fields/New_Strategy_Brief_Sent__c.field-meta.xml
<CustomField>
    <fullName>New_Strategy_Brief_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Strategy Brief Sent</label>
    <type>Checkbox</type>
</CustomField>