unpackaged/main/default/objects/Account/fields/New_Strategy_Brief_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Strategy_Brief_Sent_Date__c</fullName>
    <label>New Strategy Brief Sent Date</label>
    <type>Date</type>
</CustomField>