unpackaged/main/default/objects/Account/fields/No_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Reason__c</fullName>
    <description>Follow up field to document the ICP &quot;No&quot; Reason</description>
    <inlineHelpText>Explain where this agent operates</inlineHelpText>
    <label>No Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>