unpackaged/main/default/objects/Account/fields/Number_of_retention_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_retention_opportunities__c</fullName>
    <label>Number of retention opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.Addendum_Type__c</field>
        <operation>equals</operation>
        <value>Downgrade</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Addendum_Type__c</field>
        <operation>equals</operation>
        <value>Cancellation</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>