unpackaged/main/default/objects/Account/fields/ODA_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>ODA_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ODA Form Received</label>
    <type>Checkbox</type>
</CustomField>