unpackaged/main/default/objects/Account/fields/ONLY_operates_in_US_and_Canada__c.field-meta.xml
<CustomField>
    <fullName>ONLY_operates_in_US_and_Canada__c</fullName>
    <description>Case Number: 00088509</description>
    <label>ONLY operates in US and Canada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>