unpackaged/main/default/objects/Account/fields/Opportunity_Products_Added__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Products Added</label>
    <type>Checkbox</type>
</CustomField>