unpackaged/main/default/objects/Account/fields/Original_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Source__c</fullName>
    <label>Original Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organic Search</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Organic Social</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>Other Campaigns</fullName>
            </value>
            <value>
                <fullName>Direct Traffic</fullName>
            </value>
            <value>
                <fullName>Offline Sources</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>