unpackaged/main/default/objects/Account/fields/Other_ICP__c.field-meta.xml
<CustomField>
    <fullName>Other_ICP__c</fullName>
    <description>Dependent on field &quot;what they&#39;ve tried before&quot;</description>
    <inlineHelpText>Only complete this field if &quot;What they&#39;ve tried before&quot;  field answer is &quot;other&quot;</inlineHelpText>
    <label>Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>