unpackaged/main/default/objects/Account/fields/Paid_Media__c.field-meta.xml
<CustomField>
    <fullName>Paid_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Media</label>
    <type>Checkbox</type>
</CustomField>