unpackaged/main/default/objects/Account/fields/Paid_Media_Done__c.field-meta.xml
<CustomField>
    <fullName>Paid_Media_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Media Done</label>
    <type>Checkbox</type>
</CustomField>