unpackaged/main/default/objects/Account/fields/Paid_Media_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Paid_Media_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for Paid Media Specialist book of business</description>
    <label>Paid Media Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>