unpackaged/main/default/objects/Account/fields/Partner_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sentiment__c</fullName>
    <label>Partner Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>