unpackaged/main/default/objects/Account/fields/Partnership_Organization__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Organization__c</fullName>
    <label>Partnership Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partnership_Organization</valueSetName>
    </valueSet>
</CustomField>