unpackaged/main/default/objects/Account/fields/Past_Due_Contracts_Count__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Contracts_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Contracts marked as In Collections</description>
    <label>Past Due Contracts Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>