unpackaged/main/default/objects/Account/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <formula>Contact__r.Contact_18_digit_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact ID</label>
    <type>Text</type>
</CustomField>