unpackaged/main/default/objects/Account/fields/Prior_12_months_buyer_transaction_value__c.field-meta.xml
<CustomField>
    <fullName>Prior_12_months_buyer_transaction_value__c</fullName>
    <label>(MLS) Prior 12 months buyer transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>