unpackaged/main/default/objects/Account/fields/Prior_12_months_total_transaction_value__c.field-meta.xml
<CustomField>
    <fullName>Prior_12_months_total_transaction_value__c</fullName>
    <formula>Prior_12_months_sold_transaction_value__c +  Prior_12_months_buyer_transaction_value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior 12 months total transaction value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>