unpackaged/main/default/objects/Account/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Value</fullName>
            </value>
            <value>
                <fullName>High Influence</fullName>
            </value>
            <value>
                <fullName>Tech Savy</fullName>
            </value>
            <value>
                <fullName>Tech Adverse</fullName>
            </value>
            <value>
                <fullName>High Maintenance</fullName>
            </value>
            <value>
                <fullName>Easy Breezy</fullName>
            </value>
            <value>
                <fullName>Frugal</fullName>
            </value>
            <value>
                <fullName>Ready to Spend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>