unpackaged/main/default/objects/Account/fields/Prospecting__c.field-meta.xml
<CustomField>
    <fullName>Prospecting__c</fullName>
    <label>Prospecting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>BDR Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>