unpackaged/main/default/objects/Account/fields/Recommended_Plan__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Plan__c</fullName>
    <label>(MLS) Recommended Plan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>