unpackaged/main/default/objects/Account/fields/Reporting_link__c.field-meta.xml
<CustomField>
    <fullName>Reporting_link__c</fullName>
    <label>Reporting link</label>
    <type>Url</type>
</CustomField>