unpackaged/main/default/objects/Account/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retention</label>
    <type>Checkbox</type>
</CustomField>