unpackaged/main/default/objects/Account/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>