unpackaged/main/default/objects/Account/fields/SEO__c.field-meta.xml
<CustomField>
    <fullName>SEO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEO</label>
    <type>Checkbox</type>
</CustomField>