unpackaged/main/default/objects/Account/fields/SEO_Front_Conversation_link__c.field-meta.xml
<CustomField>
    <fullName>SEO_Front_Conversation_link__c</fullName>
    <label>SEO Front Conversation link</label>
    <type>Url</type>
</CustomField>