unpackaged/main/default/objects/Account/fields/SEO_Specialist__c.field-meta.xml
<CustomField>
    <fullName>SEO_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Main POC for SEO inquires related to a client</inlineHelpText>
    <label>SEO Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>