unpackaged/main/default/objects/Account/fields/Side_Source__c.field-meta.xml
<CustomField>
    <fullName>Side_Source__c</fullName>
    <label>Side Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migration - Side</fullName>
            </value>
            <value>
                <fullName>New Logos - Side</fullName>
            </value>
            <value>
                <fullName>LP to Side Billing - Side</fullName>
            </value>
            <value>
                <fullName>Personal Website - Side</fullName>
            </value>
            <value>
                <fullName>Left Side</fullName>
            </value>
            <value>
                <fullName>Left Side, Kept Website</fullName>
            </value>
            <value>
                <fullName>Left Side, Unresponsive</fullName>
            </value>
            <value>
                <fullName>Kept Website</fullName>
                <isActive>false</isActive>
                <label>Kept Website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>