unpackaged/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Re - Engage Prospect</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cooling</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Lost Opportunity</fullName>
                <isActive>false</isActive>
                <label>Lost Opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>