unpackaged/main/default/objects/Account/fields/Strategy_Brief_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Brief_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helps CSMs track clients opting out of strategy brief</description>
    <inlineHelpText>This field should only be marked when the client does not complete the strategy brief.</inlineHelpText>
    <label>Strategy Brief Opt Out</label>
    <type>Checkbox</type>
</CustomField>