unpackaged/main/default/objects/Account/fields/Strategy_Brief_Sent__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Brief_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategy Brief Sent</label>
    <type>Checkbox</type>
</CustomField>