unpackaged/main/default/objects/Account/fields/Strategy_Brief_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Brief_Sent_Date__c</fullName>
    <label>Strategy Brief Sent Date</label>
    <type>Date</type>
</CustomField>