unpackaged/main/default/objects/Account/fields/Strategy_Deck__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Deck__c</fullName>
    <description>Improve visibility &amp; access for teams to strategy deck</description>
    <inlineHelpText>Link to the client&#39;s completed strategy deck</inlineHelpText>
    <label>Strategy Deck</label>
    <type>Url</type>
</CustomField>