unpackaged/main/default/objects/Account/fields/Strategy_Deck_Task__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Deck_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategy Deck Task</label>
    <type>Checkbox</type>
</CustomField>