unpackaged/main/default/objects/Account/fields/Subscription_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Renewal_Date__c</fullName>
    <label>Subscription Renewal Date</label>
    <type>Date</type>
</CustomField>