unpackaged/main/default/objects/Account/fields/Target_Customer__c.field-meta.xml
<CustomField>
    <fullName>Target_Customer__c</fullName>
    <formula>(CASE(Years_in_Business__c, &quot;3+&quot;, 1,0)+

CASE(Average_Transactions_Year__c , &quot;10+&quot;, 1, 0) +  

CASE(Located_in_a_high_end_market__c , &quot;Yes&quot;,1, 0)+ 

CASE(Average_home_price_is_500k__c , &quot;Yes&quot;, 1,0)+ 

CASE(Has_made_some_attempt_time_at__c , &quot;Yes&quot;, 1, 0) + 

CASE( ONLY_operates_in_US_and_Canada__c, &quot;Yes&quot;, 1,0)

)/6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Target Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>