unpackaged/main/default/objects/Account/fields/Tenants__c.field-meta.xml
<CustomField>
    <fullName>Tenants__c</fullName>
    <label>Tenants</label>
    <summaryForeignKey>Tenant__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>