unpackaged/main/default/objects/Account/fields/Tier_Plan__c.field-meta.xml
<CustomField>
    <fullName>Tier_Plan__c</fullName>
    <label>Highest Tier Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tier_Plan</valueSetName>
    </valueSet>
</CustomField>