unpackaged/main/default/objects/Account/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GMT-4 Eastern Daylight Time</fullName>
            </value>
            <value>
                <fullName>GMT-5 Central Daylight Time</fullName>
            </value>
            <value>
                <fullName>GMT-6 Mountain Daylight Time</fullName>
            </value>
            <value>
                <fullName>GMT-7 Pacific Daylight Time</fullName>
            </value>
            <value>
                <fullName>GMT-8 Alaska Daylight Time</fullName>
            </value>
            <value>
                <fullName>GMT-10 Hawaii-Aleutian Standard Time</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>Alaska Time (AK)</fullName>
            </value>
            <value>
                <fullName>Atlantic Standard (AST)</fullName>
            </value>
            <value>
                <fullName>Central Time (CT)</fullName>
            </value>
            <value>
                <fullName>Eastern Time (ET)</fullName>
            </value>
            <value>
                <fullName>Hawaii Standard Time (HST)</fullName>
            </value>
            <value>
                <fullName>Mountain Standard Time (MST)</fullName>
            </value>
            <value>
                <fullName>Mountain Time (MT)</fullName>
            </value>
            <value>
                <fullName>Newfoundland Standard (NDT)</fullName>
            </value>
            <value>
                <fullName>Pacific Time (PT)</fullName>
            </value>
            <value>
                <fullName>Puerto Rico Standard Time (PST)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>