unpackaged/main/default/objects/Account/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <formula>One_Time_Fee__c +  Total_Monthly_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>