unpackaged/main/default/objects/Account/fields/Twitter_Followers__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Followers__c</fullName>
    <label>Twitter Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>