unpackaged/main/default/objects/Account/fields/VIP_Reason__c.field-meta.xml
<CustomField>
    <fullName>VIP_Reason__c</fullName>
    <label>VIP Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CB SOE (Society of Excellence)</fullName>
            </value>
            <value>
                <fullName>CB ILA (International Luxury Alliance)</fullName>
            </value>
            <value>
                <fullName>SIR Market Leader</fullName>
            </value>
            <value>
                <fullName>CB Global Luxury</fullName>
            </value>
            <value>
                <fullName>Network Member</fullName>
            </value>
            <value>
                <fullName>WSJ Top 250</fullName>
            </value>
            <value>
                <fullName>Compass Influencer</fullName>
            </value>
            <value>
                <fullName>Corcoran Influencer</fullName>
            </value>
            <value>
                <fullName>Celebrity Agent</fullName>
            </value>
            <value>
                <fullName>Large Brokerage Client</fullName>
            </value>
            <value>
                <fullName>Other - Misc. VIP (Please add Notes)</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>CB Market Leader</fullName>
            </value>
            <value>
                <fullName>Global Collective Member</fullName>
            </value>
            <value>
                <fullName>Large Brokerage 50+ Agents</fullName>
            </value>
            <value>
                <fullName>Other - Misc. VIP</fullName>
            </value>
            <value>
                <fullName>Minor Market Transaction Volume &gt;$500M</fullName>
            </value>
            <value>
                <fullName>Major Market Transaction Volume &gt;$1B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>