unpackaged/main/default/objects/Account/fields/Website_Domain3__c.field-meta.xml
<CustomField>
    <fullName>Website_Domain3__c</fullName>
    <formula>Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website Domain</label>
    <type>Text</type>
</CustomField>