unpackaged/main/default/objects/Account/fields/Website_Domain__c.field-meta.xml
<CustomField>
    <fullName>Website_Domain__c</fullName>
    <label>Website Domain</label>
    <type>Url</type>
</CustomField>