unpackaged/main/default/objects/Account/fields/Website_implementation_status__c.field-meta.xml
<CustomField>
    <fullName>Website_implementation_status__c</fullName>
    <label>Website implementation status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>