unpackaged/main/default/objects/Account/fields/Website_subscription_payment_term__c.field-meta.xml
<CustomField>
    <fullName>Website_subscription_payment_term__c</fullName>
    <label>Website Subscription Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>2 years upfront</fullName>
            </value>
            <value>
                <fullName>3 years upfront</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Semi Annual</fullName>
                <isActive>false</isActive>
                <label>Semi Annual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>