unpackaged/main/default/objects/Account/fields/Website_Type__c.field-meta.xml
<CustomField>
    <fullName>Website_Type__c</fullName>
    <label>Website Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Website_Type</valueSetName>
    </valueSet>
</CustomField>