unpackaged/main/default/objects/Account/fields/Welcome_call__c.field-meta.xml
<CustomField>
    <fullName>Welcome_call__c</fullName>
    <label>Welcome call</label>
    <type>Date</type>
</CustomField>